# api-salesforce-mock

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  nginx.config  populate_data.py  pyproject.toml  render.yaml  requirements.txt
auth/: auth.py
docs/: schema.py  swagger_config.py
init-scripts/: 01-init.sql
models/: models.py
salesforce_api/: assets.py  campaigns.py  contacts.py  data_events.py  email_definitions.py
utils/: extensions.py  populate_data.py
